--- a/app/views/purchases/show.html.erb
+++ b/app/views/purchases/show.html.erb
@@ -1,5 +1,28 @@
 
 <div style="background-color: #ffffff">
-<p>This is your purchase</p>
-<p>Your purchase is <%= @purchase.inspect %></p>
+  <section id="content-receipt" class="clearfix">
+    <div id="receipt-container">
+      <div class="dotmatrix left"></div>
+      <div id="receipt-content">
+        <h4 id="receipt-title">Thank You!</h4>
+        <p><strong>RECEIPT</strong></p>
+        <div id="receipt-details" class="row clearfix">
+          <div class="col-sm-8 receipt-left">
+            <p><strong class="font-weight-heavy">Growth Hacking</strong><br/> <span class="font-weight-light">Crash Course</span></p>
+          </div>
+          <div class="col-sm-4">
+            $4.99
+          </div>
+        </div>
+        <a href="https://www.dropbox.com/s/uy41lh3y62ros73/lesson2.pdf?dl=0"><button type="button" class="btn btn-success btn-xs">DOWNLOAD</button></a>
+        <footer id="receipt-footer">
+          <small>Your purchase is complete. We hope you enjoy it!</small>
+        </footer>
+      </div>
+      <div class="dotmatrix right"></div>
+    </div>
+    <div id="receipt-shadow"></div>
+  </section>
+
+  
 </div>
